[package]
name = "the-ultimate-test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = "1.18.14"
solana-client = "1.18.14"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base58 = "0.2.0"
bs58 = "0.5.1"
spl-token = "8.0.0"
solana-program = "2.3.0"
base64 = "0.22.1"
